--- a/src/works/grid_example/css/sass/main.sass
+++ b/src/works/grid_example/css/sass/main.sass
@@ -1,5 +1,7 @@
 $primary-color: #ffffff
 $secondary-color: #183B56
+$button-color: #1565D8
+$footer-color: #5A7184
 
 *
     box-sizing: border-box
@@ -60,11 +62,16 @@ h3
     margin: 0
 
     font-family: "Gotham", sans-serif
+    font-size: 2.8rem
+    font-weight: 700
+    line-height: 3.6rem
 
 h4
     margin: 0
     
-    font-family: "Gotham", sans-serif
+    font-size: 1.8rem
+    font-weight: 700
+
 
 
 input, button 
