--- a/src/works/grid_example/css/style.css
+++ b/src/works/grid_example/css/style.css
@@ -78,11 +78,15 @@ h2 {
 h3 {
   margin: 0;
   font-family: "Gotham", sans-serif;
+  font-size: 2.8rem;
+  font-weight: 700;
+  line-height: 3.6rem;
 }
 
 h4 {
   margin: 0;
-  font-family: "Gotham", sans-serif;
+  font-size: 1.8rem;
+  font-weight: 700;
 }
 
 input, button {
@@ -224,6 +228,7 @@ input, button {
 
 .featured {
   height: 38rem;
+  margin-top: 9.6rem;
   display: grid;
   grid-auto-flow: column;
   column-gap: 3.2rem;
@@ -232,6 +237,11 @@ input, button {
   box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.15);
 }
 
+@media (min-width: 780px) {
+  .featured:hover {
+    transform: scale(1.01);
+  }
+}
 .featured__img {
   width: 57rem;
   height: 38rem;
@@ -321,10 +331,10 @@ input, button {
 .all-articles__featured-item {
   width: 55.5rem;
   height: 60rem;
+  border-radius: 1.6rem;
 }
 .all-articles__featured-item > img {
-  position: relative;
-  top: -60rem;
+  margin-top: -60rem;
   border-radius: 1.6rem;
 }
 
@@ -348,6 +358,90 @@ input, button {
   color: #ffffff;
 }
 
+.all-articles__common {
+  width: 100%;
+  margin-top: 3rem;
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: space-between;
+}
+
+.all-articles__common-item {
+  width: 36rem;
+  height: 50rem;
+  border-radius: 1.6rem;
+}
+.all-articles__common-item > img {
+  position: relative;
+  top: -50rem;
+  border-radius: 1.6rem;
+}
+
+.all-articles__common-item-content {
+  width: 35rem;
+  height: 50rem;
+  padding: 3.2rem 3.2rem 4rem 3.2rem;
+  position: relative;
+  z-index: 2;
+  display: grid;
+  align-content: end;
+}
+.all-articles__common-item-content > .item-footer {
+  margin-top: 3.2rem;
+}
+
+.all-articles__common-description {
+  margin-top: 1.2rem;
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 3.6rem;
+}
+
+.all-articles__more {
+  margin: 4.8rem auto 0 auto;
+  padding: 1.3rem 2.4rem;
+  display: grid;
+  grid-auto-flow: column;
+  align-content: center;
+  column-gap: 1.6rem;
+  color: #1565D8;
+  font-size: 1.6rem;
+  font-weight: 700;
+  border: 2px solid #1565D8;
+  border-radius: 0.8rem;
+  background-color: transparent;
+}
+.all-articles__more > div {
+  display: inline-block;
+  width: 1.3rem;
+  height: 1.6rem;
+  position: relative;
+  top: 0.1rem;
+}
+.all-articles__more > div:nth-child(3) {
+  display: none;
+}
+
+@media (min-width: 780px) {
+  .all-articles__more:hover {
+    color: #ffffff;
+    background-color: #1565D8;
+  }
+  .all-articles__more:hover > div:nth-child(2) {
+    display: none;
+  }
+  .all-articles__more:hover > div:nth-child(3) {
+    display: inline-block;
+  }
+  .all-articles__featured-item:hover {
+    box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.18);
+    transform: scale(1.01);
+  }
+  .all-articles__common-item:hover {
+    box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.18);
+    transform: scale(1.01);
+  }
+}
 .featured-label {
   display: block;
   width: 10.2rem;
@@ -357,6 +451,76 @@ input, button {
   color: #1565D8;
   background-color: #e8faf2;
   border-radius: 1.8rem;
+}
+
+footer {
+  background-color: #0D2436;
+  margin: 4.5rem auto 0 auto;
+  width: 144rem;
+}
+
+.footer {
+  display: grid;
+  grid-template-areas: "logo        links1 links2 links3 links4" "description links1 links2 links3 links4" "networks    links1 links2 links3 links4" "copyrigt copyrigt copyrigt copyrigt copyrigt";
+  padding: 12.6rem 0 8.2rem 0;
+  color: #5A7184;
+}
+
+.footer__logo {
+  grid-area: logo;
+  width: 9rem;
+  height: 2.8rem;
+}
+
+.footer__description {
+  grid-area: description;
+  margin-top: 2.8rem;
+  max-width: 25rem;
+  font-size: 1.6rem;
+  line-height: 2.8rem;
+}
+
+.footer__social-networks {
+  grid-area: networks;
+  max-width: 25rem;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  gap: 1.7rem 2.2rem;
+}
+.footer__social-networks > a {
+  font-size: 1.6rem;
+  font-weight: 400;
+  text-transform: capitalize;
+  color: #5A7184;
+}
+
+.footer__links > ul > li {
+  list-style: none;
+}
+
+.footer__links > ul > li:not(:first-child) {
+  margin-top: 2.4rem;
+}
+
+.footer__links:nth-child(1) {
+  grid-area: links1;
+}
+
+.footer__links:nth-child(2) {
+  grid-area: links2;
+}
+
+.footer__links:nth-child(3) {
+  grid-area: links3;
+}
+
+.footer__links:nth-child(4) {
+  grid-area: links4;
+}
+
+.footer__copyright {
+  grid-area: copyrigt;
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
